# kakimail

./: .gitignore  Cargo.toml  Dockerfile  IMAPCommands.md  IMAPnotes  NOTES.md  README.md  TO-DO.md  database.excalidraw  docker-compose.yml  kakimail-plan.excalidraw  main.c  nvim  t  test.txt
data/: .gitignore  kakimail.db
python-test/: imap.py  pyvenv.cfg  quick_mail_test.py
src/: database.rs  email_auth.rs  imap.rs  main.rs  smtp.rs  smtp_common.rs  smtp_incoming.rs  smtp_outgoing.rs  tls.rs  utils.rs
src/imap_op/: append.rs  authenticate.rs  bodystructure.rs  capability.rs  close.rs  copy.rs  create.rs  delete.rs  enable.rs  examine.rs  expunge.rs  fetch.rs  idle.rs  list.rs  login.rs  logout.rs  mod.rs  move_op.rs  namespace.rs  noop.rs  rename.rs  search.rs  select.rs  starttls.rs  status.rs  store.rs  subscribe.rs  uid.rs  unselect.rs  unsubscribe.rs
src/parsing/: imap.rs  mod.rs
test/: imap.py  main.py  pyvenv.cfg  quick_mail_test.py  quick_submission_test.py  run.sh
