[package]
name = "kakimail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.22.0"
bcrypt = "0.15.0"
chrono = "0.4.33"
dotenv = "0.15.0"
hickory-resolver = "0.24.0"
# need to update someday
libsql-client = { version = "0.33.4", default-features = false, features = ["local_backend", "reqwest_backend"] }
reqwest = { version = "0.12.2", features = ["json"] }
rustls-pemfile = "2.1.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
